syntax = "proto3";

package pb;
import "todo.proto";

option go_package = "remind/todo/pb";

message GetTodoByIDRequest {
  string id = 1;
  string username = 2;
}

message GetTodoByIDResponse {
  Todo todo = 1;
}
